tests/baselines/reference/functionWithDefaultParameterWithNoStatements9.errors.txt
tests/cases/compiler/functionWithDefaultParameterWithNoStatements9.ts(1,18): error TS2304: Cannot find name 'console'.
tests/cases/compiler/functionWithDefaultParameterWithNoStatements9.ts(3,18): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/functionWithDefaultParameterWithNoStatements9.ts (2 errors) ====
    function foo(a = console.log) { }
                     ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    
    function bar(a = console.log) {
                     ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    }